Enriching nb_fans and nb_albums, reworked full load